# DesAuto_Project

./: .gitignore  Cube 432.stl  CutOutBox 3830.stl  Eiffel Tower 760.stl  Figet Spinner 1008.stl  House1 94.stl  House3 64.stl  House4 106.stl  LICENSE  LondonPhoneBooth open 8694.stl  README.md  Submission Notes.docx  Traffic Cone 4072.stl  Transform.py  VictorianStorefront 14122.stl  cli.py  cli.spec  igloo 2532.stl  requirements.txt  setup.cfg
Dist_Meta/: README.md
HW3/: README.txt
STL/: PlotSTL.py  ReadSTL.py  Transform.py
STL/Sample STL Files/: BowTie 5496.stl  C3P0 2336.stl  Eiffel Tower 760.stl  Figet Spinner 1008.stl  Traffic Cone 4072.stl  VictorianStorefront 14122.stl
Sample STL Files/: Blocks 1748.stl  Cube 432.stl  CutOutBox 3830.stl  Elephant 818.stl  House1 94.stl  House3 64.stl  House4 106.stl  LondonPhoneBooth closed 5880.stl  LondonPhoneBooth open 8694.stl  Simple 8.stl  igloo 2532.stl
media/: README.md
src/: __main__.py  curr_paths.txt  requirements.txt  test_caller.py
src/STL/: Clipping.py  Extrusion.py  Methods.py  Offset.py  PlotSTL.py  Project Part2 Script.py  README.txt  ReadSTL.py  SliceSTL.py  Transform.py  tests.py
src/gui/: alignment_widget.py  main_window.py  mode_widget.py  ortho_widget.py  pan_widget.py  param_widget.py  plot_window.py  rotation_widget.py  scale_widget.py  translate_widget.py  zoom_widget.py
