[metadata]
name = DESAUTO_PROJECT
version = 0.0.1
author = William Hawthorne, John Mcadams, John Morris, Rishikesh Reddy Patlolla
author_email = jhmrrs@clemson.edu
description = Custom slicer for FFF printing of STL files, for ME4010 (Clemson University)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmorris335/DesAuto_Project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Java Research License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src